--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
   },
   "dependencies": {
     "cloudinary": "^2.5.0",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.7",
+    "mapbox-gl": "^3.12.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "next": "14.2.13",
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-geocode": "^2.0.1",
     "react-icons": "^5.3.0",
+    "react-map-gl": "^8.0.4",
+    "react-share": "^5.2.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3"
   }
 }
